--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
     </div>
     <form id="animal-form">
-        <label for="animal-input">Add an Animal</label>
+        <label for="animal-input">Add an Animal:</label>
         <input type="text" id="animal-input">
 
         <input id="addAnimal" type="Submit" value="Submit">
